<resources>
    <string name="app_name">Prototype</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string-array name="ruangan_options">
        <item>Ruang 1</item>
        <item>Ruang 2</item>
        <item>Ruang 3</item>
    </string-array>
    <string name="gen_image_desc">Part of background image</string>
    <string name="gen_icon_desc">Icon to go back to the previous screen</string>
    <string name="gen_fullname_hint">Enter your full name</string>
    <string name="gen_email_hint">Enter your email</string>
    <string name="gen_password_hint">Enter your password</string>
    <string name="gen_login_text">Login</string>
    <string name="gen_register_text">Register</string>
    <string name="gen_submit_button">Submit</string>
    <string name="gen_cancel_button">Cancel</string>
    <string name="gen_logout_desc">Akhiri sesi user login</string>
    <string name="gen_search_hint">Search by date</string>
    <string name="gen_calender_desc">Gunakan kalender untuk input tanggal</string>
    <string name="report_title">Report</string>
    <string name="report_exportpdf_text">Export PDF</string>
    <string name="report_head_tgl">Tgl Booking</string>
    <string name="report_head_user">Pembuat</string>
    <string name="report_head_mulai">Mulai</string>
    <string name="report_head_selesai">Selesai</string>
    <string name="report_head_ruangan">Ruangan</string>
    <string name="report_head_pic">PIC</string>
    <string name="report_head_event">Event</string>
    <string name="report_head_pesrta">Peserta</string>
    <string name="book_title">My Bookings</string>
    <string name="book_fab_desc">Add Book</string>
    <string name="feedback_title">Feed Back!</string>
    <string name="feedback_subtitle">Kritik tanpa Saran = Menjatuhkan\nnamun\nKritik dengan Saran = Membangun</string>
    <string name="feedback_input_hint">Tuliskan kritik dan saran Anda</string>
    <string name="feedback_image_desc">Gambar ilustrasi Feedback</string>
    <string name="form_title">Form Booking</string>
    <string name="form_subtitle">Isi form dengan lengkap dan sesuai kebutuhan</string>
    <string name="form_tgl_txt">Tanggal Booking</string>
    <string name="form_tgl_hint">Pilih tanggal</string>
    <string name="form_jam_txt">Waktu Booking</string>
    <string name="form_mulai_hint">Mulai</string>
    <string name="form_selesai_hint">Selesai</string>
    <string name="form_separator">-</string>
    <string name="form_ruangan_txt">Ruangan</string>
    <string name="form_pic_txt">PIC Booking</string>
    <string name="form_pic_hint">Nama PIC</string>
    <string name="form_event_txt">Judul Event</string>
    <string name="form_event_hint">Judul event</string>
    <string name="form_peserta_txt">Jumlah Peserta</string>
    <string name="form_peserta_hint">Jumlah peserta</string>
    <string name="home_title">Hai, Booking ruangan apa hari ini?</string>
    <string name="home_menu1_text">Peraturan Berlaku</string>
    <string name="home_menu1_desc">Ikon untuk peraturan berlaku</string>
    <string name="home_menu2_text">Preview Ruangan</string>
    <string name="home_menu2_desc">Ikon untuk preview ruangan</string>
    <string name="home_menu3_text">My Booking</string>
    <string name="home_menu3_desc">Ikon untuk my booking</string>
    <string name="home_menu4_text">Report</string>
    <string name="home_menu4_desc">Ikon untuk report</string>
    <string name="home_menu5_text">List Booking</string>
    <string name="home_menu5_desc">Ikon untuk list booking</string>
    <string name="home_menu6_text">Kritik dan Saran</string>
    <string name="home_menu6_desc">Ikon untuk kritik dan saran</string>
    <string name="home_usermail">email address</string>
    <string name="home_username">full name</string>
    <string name="list_title">List Booking</string>
    <string name="list_fab_desc">Add Book</string>
    <string name="login_title">Welcome back!</string>
    <string name="login_image_desc">Illustration representing login</string>
    <string name="login_no_account">No have an account?</string>
    <string name="main_icon_desc">Animated logo of YukMeet</string>
    <string name="main_title">YukMeet</string>
    <string name="main_subtitle">
        Aplikasi booking meeting &amp; Event online, Persiapan Meeting &amp; Event menjadi cepat, aman dan tenang&#8230; yuk kita booking&#8230;
    </string>
    <string name="register_title">Welcome Onboard</string>
    <string name="register_subtitle">Yuk daftar dulu untuk buat akun YukMeet</string>
    <string name="register_image_desc">Illustration representing registration</string>
    <string name="register_createpassword_hint">Create password</string>
    <string name="register_confirmpassword_hint">Confirm password</string>
    <string name="register_have_account">Already have an account?</string>
    <string name="rules_title">Obey The Rules</string>
    <string name="rules_subtitle">Mohon untuk dapat mengikuti dan mematuhi aturannya ya!</string>
    <string name="rules_text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="rules_text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="IB_tgl_txt">Tanggal Booking</string>
    <string name="IB_mulai_txt">Jam Mulai</string>
    <string name="IB_separator_txt">-</string>
    <string name="IB_selesai_txt">Jam Selesai</string>
    <string name="IB_ruang_txt">Ruangan</string>
    <string name="IB_pic1_txt">"PIC Booking  :  "</string>
    <string name="IB_pic2_txt">PIC Booking</string>
    <string name="IB_event1_txt">"Judul Event  :  "</string>
    <string name="IB_event2_txt">Judul Event</string>
    <string name="IB_peserta1_txt">"Jumlah Peserta  :  "</string>
    <string name="IB_peserta2_txt">Jumlah Peserta</string>
    <string name="IB_orang_txt">" Orang"</string>
</resources>