<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppinsregular"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:ignore="TextSizeCheck,VisualLintBounds">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textTanggalBooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/IB_tgl_txt"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textJamMulai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IB_mulai_txt"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/IB_separator_txt"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textJamSelesai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IB_selesai_txt"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textRuangan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/IB_ruang_txt"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IB_pic1_txt" />

            <TextView
                android:id="@+id/textPicBooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IB_pic2_txt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IB_event1_txt" />

            <TextView
                android:id="@+id/textJudulEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IB_event2_txt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IB_peserta1_txt" />

            <TextView
                android:id="@+id/textJumlahPeserta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IB_peserta2_txt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IB_orang_txt" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>