<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/tanggalBookingTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/report_head_tgl"
        android:textSize="11sp"
        android:textAlignment="center"
        android:backgroundTint="@color/white"/>

    <TextView
        android:id="@+id/pembuatTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/report_head_user"
        android:textSize="11sp"
        android:textAlignment="center"
        android:backgroundTint="@color/white"  />



    <TextView
        android:id="@+id/jamMulaiTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/report_head_mulai"
        android:textSize="11sp"
        android:textAlignment="center"
        android:backgroundTint="@color/white"  />

    <TextView
        android:id="@+id/jamSelesaiTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/report_head_selesai"
        android:textSize="11sp"
        android:textAlignment="center"
        android:backgroundTint="@color/white"  />

    <TextView
        android:id="@+id/ruanganTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/report_head_ruangan"
        android:textSize="11sp"
        android:textAlignment="center"
        android:backgroundTint="@color/white"  />

    <TextView
        android:id="@+id/picBookingTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/report_head_pic"
        android:textSize="11sp"
        android:textAlignment="center"
        android:backgroundTint="@color/white"  />

    <TextView
        android:id="@+id/judulEventTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/report_head_event"
        android:textSize="11sp"
        android:textAlignment="center"
        android:backgroundTint="@color/white"  />

    <TextView
        android:id="@+id/jumlahPesertaTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/report_head_pesrta"
        android:textSize="11sp"
        android:textAlignment="center"
        android:backgroundTint="@color/white" />

</LinearLayout>